--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-# this is WARP PLUS KEY OR WARP TEAM KEY. defualt empty use  warp free  
-# WARP_KEY="warp plus token"
+# if open DEBUG
+#DEBUG_WARP=1
 
-# this warp-cli proxy port defualt 40000
-WARP_PORT=40000
+#this is WARP PLUS KEY OR WARP TEAM KEY. defualt empty use  warp free
+WARP_KEY="97f82vwY-L4FK02w9-8x1J9B5D"
+
+#this warp-cli proxy port defualt 40000
+ARP_PORT=40000
+
